✨ fix logo img height on mobile phone

--- a/assets/scss/theme/media.scss
+++ b/assets/scss/theme/media.scss
@@ -79,7 +79,7 @@
 @media only screen and (max-width: 500px) {
 
     #blog-logo img {
-        max-height: 70px;
+        max-height: 76px;
     }
     #blog-logo {
         width: 80px;
